programs/loops/loops_class_board.txt
Last login: Sat Aug 27 06:05:37 on ttys000
cp-dev@macbook-air ~ % dict1 = {'Ten': 10, 'Twenty': 20, 'Thirty': 30}
dict2 = {'Thirty': 30, 'Fourty': 40, 'Fifty': 50}dict3 = {**dict1, **dict2}
print(dict3)
zsh: parse error near `}'
cp-dev@macbook-air ~ % python3
Python 3.8.9 (default, Oct 26 2021, 07:25:53) 
[Clang 13.0.0 (clang-1300.0.29.30)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> dict1 = {'Ten': 10, 'Twenty': 20, 'Thirty': 30}
>>> dict2 = {'Thirty': 30, 'Fourty': 40, 'Fifty': 50}dict3 = {**dict1, **dict2}
  File "<stdin>", line 1
    dict2 = {'Thirty': 30, 'Fourty': 40, 'Fifty': 50}dict3 = {**dict1, **dict2}
                                                     ^
SyntaxError: invalid syntax
>>> python2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'python2' is not defined
>>> ^D
cp-dev@macbook-air ~ % 
cp-dev@macbook-air ~ % python2
Python 2.7.18 (v2.7.18:8d21aa21f2, Apr 19 2020, 20:48:48) 
[GCC 4.2.1 Compatible Apple LLVM 6.0 (clang-600.0.57)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 
>>> dict1 = {'Ten': 10, 'Twenty': 20, 'Thirty': 30}
>>> dict2 = {'Thirty': 50, 'Fourty': 40, 'Fifty': 50}
>>> *dict1
  File "<stdin>", line 1
    *dict1
    ^
SyntaxError: invalid syntax
>>> print (*dict1)
  File "<stdin>", line 1
    print (*dict1)
           ^
SyntaxError: invalid syntax
>>> print (**dict1)
  File "<stdin>", line 1
    print (**dict1)
            ^
SyntaxError: invalid syntax
>>> import os
>>> os.system("clear")

0
>>> for i in range(0,10):
...     print (i)
... 
0
1
2
3
4
5
6
7
8
9
>>> for i in range(0,10):
...     if (i == 4):
...             continue
...     print ("NUMBER - ",i)
... 
('NUMBER - ', 0)
('NUMBER - ', 1)
('NUMBER - ', 2)
('NUMBER - ', 3)
('NUMBER - ', 5)
('NUMBER - ', 6)
('NUMBER - ', 7)
('NUMBER - ', 8)
('NUMBER - ', 9)
>>> for i in range(0,10):
...     if (i == 4):
...             break
...     print ("NUMBER - ",i)
... 
('NUMBER - ', 0)
('NUMBER - ', 1)
('NUMBER - ', 2)
('NUMBER - ', 3)
>>> 4%2 == 0
True
>>> 6%2 == 0
True
>>> 6%2 != 0
False
>>> 7%2 != 0
True
>>> 
